--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ footer {
 @media(min-width:768px) {
     footer .container {
         display: flex;
-        /* max-width: 1000px; */
+        max-width: 1000px;
         margin-left: auto;
         margin-right: auto;
     }
