--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ header {
     margin: 0;
 }
 
-.b {
+.bookmark .B {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
@@ -106,15 +106,15 @@ header {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
-.b a:hover{
+.bookmark .B a:hover{
     background-color: #ddd;
 }
 
-.b a{
+.bookmark .B a{
     color: black;
 }
 
-.a:hover .b{
+.bookmark .A:hover .B{
     display: block;
 }
 
