--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ header {
     padding: 17.25px 0px;
 }
 
-.headernav a{
+.headernav a {
     float: left;
     font-size: 16px;
     color: white;
@@ -108,7 +108,7 @@ header {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
+    /* min-width: 160px; */
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
