--- a/style.css
+++ b/style.css
@@ -58,19 +58,26 @@ header {
 
 /* 페이지 title 설정 */
 
-.headernav {
-    background-color: #535353 ;
-    overflow: hidden;
-    font-family: Arial, Helvetica, sans-serif;
-    height: auto;
+.title a{
+    padding: 0px;
+    justify-items: center;
 }
 
-.headernav .title img {
+.title img {
     width: 150px;
     height: min-content;
     margin-left: 15px;
     margin-right: 10px;
     padding: 17.25px 0px;
+}
+
+/* 페이지 nav 설정 */
+
+.headernav {
+    background-color: #535353 ;
+    overflow: hidden;
+    font-family: Arial, Helvetica, sans-serif;
+    height: auto;
 }
 
 .headernav a {
@@ -81,12 +88,12 @@ header {
     padding: 14px 16px;
 }
 
-.bookmark div{
+.headernav div{
     float: left;
     overflow: hidden;
 }
 
-.bookmark button{
+.headernav button{
     font-size: 16px;
     border: none;
     outline: none;
@@ -96,7 +103,7 @@ header {
     margin: 0;
 }
 
-.bookmark .B {
+.headernav .B {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
@@ -104,7 +111,7 @@ header {
 }
 
 
-.bookmark .B a{
+.headernav .B a{
     float:none;
     color: black;
     padding: 12px 16px;
@@ -113,17 +120,12 @@ header {
     text-align: left;
 }
 
-.bookmark .B a:hover{
+.headernav .B a:hover{
     background-color: #ddd;
 }
 
-.bookmark .A:hover .B{
+.headernav .A:hover .B{
     display: block;
-}
-
-.title a{
-    padding: 0px;
-    justify-items: center;
 }
 
 /* footer */
