--- a/style.css
+++ b/style.css
@@ -61,7 +61,6 @@ header {
 .title a{
     padding: 0px;
     justify-items: center;
-    float:left
 }
 
 .title img {
@@ -81,7 +80,7 @@ header {
     height: auto;
 }
 
-.headernav a {
+.title a, .headernav a {
     float: left;
     font-size: 16px;
     color: white;
