--- a/style.css
+++ b/style.css
@@ -81,12 +81,12 @@ header {
     padding: 14px 16px;
 }
 
-.bookmark div{
+.navbar div{
     float: left;
     overflow: hidden;
 }
 
-.bookmark button{
+.navbar button{
     font-size: 16px;
     border: none;
     outline: none;
@@ -96,7 +96,7 @@ header {
     margin: 0;
 }
 
-.bookmark .B {
+.navbar .dropdown_content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
@@ -104,7 +104,7 @@ header {
 }
 
 
-.bookmark .B a{
+.navbar .dropdown_content a{
     float:none;
     color: black;
     padding: 12px 16px;
@@ -113,11 +113,11 @@ header {
     text-align: left;
 }
 
-.bookmark .B a:hover{
+.navbar .dropdown_content a:hover{
     background-color: #ddd;
 }
 
-.bookmark .A:hover .B{
+.navbar .dropdown:hover .dropdown_content{
     display: block;
 }
 
