--- a/style.css
+++ b/style.css
@@ -81,6 +81,8 @@ header {
     padding: 14px 16px;
 }
 
+/* 페이지 nav 설정 */
+
 .navbar div{
     float: left;
     overflow: hidden;
@@ -125,6 +127,7 @@ header {
     padding: 0px;
     justify-items: center;
 }
+
 
 /* footer */
 footer {
