--- a/style.css
+++ b/style.css
@@ -83,12 +83,12 @@ header {
 
 /* 페이지 nav 설정 */
 
-.navbar div{
+.navbar-left div{
     float: left;
     overflow: hidden;
 }
 
-.navbar button{
+.navbar-left button{
     font-size: 16px;
     border: none;
     outline: none;
@@ -98,7 +98,7 @@ header {
     margin: 0;
 }
 
-.navbar .dropdown_content {
+.navbar-left .dropdown_content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
@@ -106,7 +106,7 @@ header {
 }
 
 
-.navbar .dropdown_content a{
+.navbar-left .dropdown_content a{
     float:none;
     color: black;
     padding: 12px 16px;
@@ -115,12 +115,17 @@ header {
     text-align: left;
 }
 
-.navbar .dropdown_content a:hover{
+.navbar-left .dropdown_content a:hover{
     background-color: #ddd;
 }
 
-.navbar .dropdown:hover .dropdown_content{
+.navbar-left .dropdown:hover .dropdown_content{
     display: block;
+}
+
+.navbar-right{
+    display:flex;
+    align-items: end;
 }
 
 .title a{
