--- a/style.css
+++ b/style.css
@@ -126,10 +126,11 @@ header {
 .navbar-right{
     display:flex;
     justify-content: right;
-    position: relative;
 }
 .navbar-right img{
     margin-right: 1rem;
+    height: 21.75px;
+    padding-top: 17.25px;
 }
 
 .title a{
