--- a/style.css
+++ b/style.css
@@ -126,11 +126,13 @@ header {
 .navbar-right{
     display:flex;
     justify-content: right;
+
 }
 .navbar-right img{
     margin-right: 1rem;
     height: 21.75px;
     padding-top: 17.25px;
+    size: 2rem;
 }
 
 .title a{
