--- a/style.css
+++ b/style.css
@@ -129,10 +129,10 @@ header {
 
 }
 .navbar-right img{
-    /* margin-right: 1rem;
-    height: 21.75px;
-    padding-top: 17.25px; */
-    size: 4rem;
+    margin-right: 1rem;
+    height: 25px;
+
+    padding-top: 14px;
 }
 
 .title a{
