--- a/style.css
+++ b/style.css
@@ -126,13 +126,13 @@ header {
 .navbar-right{
     display:flex;
     justify-content: right;
-
+    margin-right: 3rem;
 }
 .navbar-right img{
     margin-right: 1rem;
-    height: 25px;
+    height: 30px;
 
-    padding-top: 14px;
+    padding-top: 9px;
 }
 
 .title a{
