--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ header {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    text-align: left;
+    text-align: center;
 }
 
 .navbar-left .dropdown_content a:hover{
