--- a/style.css
+++ b/style.css
@@ -82,45 +82,8 @@ header {
 }
 
 /* 페이지 nav 설정 */
-
-.navbar-left .dropdown{
-    float: left;
-    overflow: hidden;
-}
-
-.navbar-left button{
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 20.25px 22px;
-    background-color: inherit;
-    margin: 0;
-}
-
-.navbar-left .dropdown_content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-
-.navbar-left .dropdown_content a{
-    float:none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: center;
-}
-
-.navbar-left .dropdown_content a:hover{
-    background-color: #ddd;
-}
-
-.navbar-left .dropdown:hover .dropdown_content{
-    display: block;
+.navbar-left {
+    display:none;
 }
 
 .navbar-right{
