--- a/style.css
+++ b/style.css
@@ -122,13 +122,16 @@ input.menu {
     height: 100%;
     width: 100%;
     z-index: 1;
-
+    position: absolute;
+    background-color: white;
+    display: none;
 }
 
 
 /* footer */
 footer {
     padding:20px;
+    padding-bottom: 0px;
     border-top:1px solid black;
     background-color:#2B5566;
     color: #fff;
@@ -143,7 +146,6 @@ footer {
 
 .footB h3 {
     margin-bottom:10px;
-    border-bottom:1px solid currentColor;
     font-size: 14px;
 }
 
@@ -155,7 +157,6 @@ footer {
 
 .footB a {
     display: block;
-    padding:5px;
     color: inherit;
     font-size:12px;
 }
