--- a/style.css
+++ b/style.css
@@ -131,7 +131,6 @@ input.menu {
 /* footer */
 footer {
     padding:20px;
-    padding-bottom: 0px;
     border-top:1px solid black;
     background-color:#2B5566;
     color: #fff;
@@ -146,6 +145,7 @@ footer {
 
 .footB h3 {
     margin-bottom:10px;
+    border-bottom:1px solid currentColor;
     font-size: 14px;
 }
 
@@ -157,6 +157,7 @@ footer {
 
 .footB a {
     display: block;
+    padding:5px;
     color: inherit;
     font-size:12px;
 }
