--- a/larger-screen-style.css
+++ b/larger-screen-style.css
@@ -138,7 +138,7 @@ header {
     display:flex;
     justify-content: right;
 }
-.navbar-right img{
+.navbar-right img, .navbar-right input{
     margin-right: 2rem;
     height: 30px;
     padding-top: 12px;
