--- a/style.css
+++ b/style.css
@@ -3,7 +3,12 @@ body {
     margin:0;
     width: 100%;
     height: 100%;
+    font-family: "Orbit", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+      
 }
+
 
 /* 페이지 전체 a 태그 설정 */
 a {
@@ -74,30 +79,36 @@ header, .top-header {
 .headernav {
     display: flex;
     background-color: #535353 ;
-    overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
-    height: auto;
+    height: 65px;
+    overflow: visible;
+
 }
 
 .headernav .title img {
-    width: 150px;
-    height: min-content;
-    margin-left: 15px;
+    width: min-content;
+    height: 25px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 17.602px;
     margin-right: 10px;
-    padding: 17.25px 0px;
+    padding: 0px 0px;
 }
 
 .headernav a {
-    float: left;
     font-size: 16px;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+}
+
+.headernav .title a{
+    font-size: 0px;
 }
 
 .navbar-left {
-    justify-content: center;
-    flex-grow: 1;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .navbar-left .dropdown{
@@ -105,31 +116,38 @@ header, .top-header {
 }
 
 .navbar-left button{
-    font-size: 16px;
     border: none;
-    outline: none;
+    font-size: 16px;
     color: white;
-    padding: 20.25px 22px;
+    width: fit-content;
+    height: 25px;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     background-color: inherit;
-    margin-left: 0.8rem;
-    margin-right: 0.8rem;
-
+    width: 120px;
 }
 
 .navbar-left .dropdown_content {
     display: none;
-    position: absolute;
+    position: relative;
     background-color: #f9f9f9;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    left: 50%; /* Set left to 0 to align with the parent */
+    transform: translateX(-50%); /* Adjust to center the content */
+    width: 110px;
+    z-index: 1;
+
 }
 
-
 .navbar-left .dropdown_content a{
-    float:none;
+    float: none;
+    padding: 15px 10px;
     color: black;
-    padding: 12px 16px;
     display: block;
     text-align: center;
+    font-size: 16px;
 }
 
 .navbar-left .dropdown_content a:hover{
@@ -141,9 +159,8 @@ header, .top-header {
 }
 
 .navbar-right{
-    display:flex;
-    justify-content: flex-end;
-    align-items: center;
+    position: absolute;
+    right: 0%;
 }
 .navbar-right img, .navbar-right input {
     height: 2rem;
@@ -151,15 +168,6 @@ header, .top-header {
     margin:12px;
     margin-right:30px;
     flex-grow: 0;
-}
-
-.title a{
-    padding: 0px;
-    justify-items: center;
-}
-
-.dropdown_content{
-    z-index: 1;
 }
 
 /* footer */
