--- a/style.css
+++ b/style.css
@@ -4,9 +4,8 @@ body {
     width: 100%;
     height: 100%;
     font-family: "Orbit", sans-serif;
-    font-weight: 400;
     font-style: normal;
-      
+    letter-spacing: 1px;
 }
 
 
@@ -70,10 +69,9 @@ input.menu {
 .headernav {
     display: flex;
     background-color: #535353 ;
-    font-family: Arial, Helvetica, sans-serif;
     height: 65px;
     overflow: visible;
-
+    font-family: "Orbit", sans-serif;
 }
 
 .headernav .title img {
@@ -110,7 +108,6 @@ input.menu {
     border: none;
     font-size: 16px;
     color: white;
-    width: fit-content;
     height: 25px;
     padding-left: 30px;
     padding-right: 30px;
@@ -118,6 +115,7 @@ input.menu {
     margin-bottom: 20px;
     background-color: inherit;
     width: 120px;
+    font-family: "Orbit", sans-serif;
 }
 
 .navbar-left .dropdown_content {
@@ -138,7 +136,7 @@ input.menu {
     color: black;
     display: block;
     text-align: center;
-    font-size: 16px;
+    font-size: 13px;
 }
 
 .navbar-left .dropdown_content a:hover{
