--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     margin:0;
     width: 100%;
     height: 100%;
-    font-family: "Orbit", sans-serif;
+    font-family: "Gowun Dodum", sans-serif;
     font-style: normal;
     letter-spacing: 1px;
 }
@@ -71,7 +71,7 @@ input.menu {
     background-color: #535353 ;
     height: 65px;
     overflow: visible;
-    font-family: "Orbit", sans-serif;
+    font-family: "Gowun Dodum", sans-serif;
 }
 
 .headernav .title img {
@@ -115,7 +115,7 @@ input.menu {
     margin-bottom: 20px;
     background-color: inherit;
     width: 120px;
-    font-family: "Orbit", sans-serif;
+    font-family: "Gowun Dodum", sans-serif;
 }
 
 .navbar-left .dropdown_content {
