--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ input.menu {
 }
 
 /* header 설정 */
+
+
 .top-header a {
     font-size: 15px;
 }
@@ -68,10 +70,17 @@ input.menu {
 
 .headernav {
     display: flex;
-    background-color: #535353 ;
+    background-color: #ffffff ;
+    border: black 10px ;
     height: 65px;
     overflow: visible;
+    border-radius: 10px; /* 이쁘게 하기*/
     font-family: "Gowun Dodum", sans-serif;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /*그림자*/
+    position: absolute; /* 고정*/
+    left: 1.5%; /* 움직이기*/
+    transform: translateX(+1.5); /**/
+    width: 97%; /* 띄우기 !*/
 }
 
 .headernav .title img {
@@ -86,7 +95,7 @@ input.menu {
 
 .headernav a {
     font-size: 18px;
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
 }
 
@@ -107,7 +116,7 @@ input.menu {
 .navbar-left button{
     border: none;
     font-size: 18px;
-    color: white;
+    color: rgb(0, 0, 0);
     height: 25px;
     padding-left: 30px;
     padding-right: 30px;
@@ -121,13 +130,14 @@ input.menu {
 .navbar-left .dropdown_content {
     display: none;
     position: relative;
-    background-color: #f9f9f9;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    background-color: #ffffff;
+    box-shadow: 0px 4px 8px  rgba(0,0,0,0.1);
     left: 50%; /* Set left to 0 to align with the parent */
     transform: translateX(-50%); /* Adjust to center the content */
     width: 120px;
     z-index: 1;
-
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .navbar-left .dropdown_content a{
@@ -137,6 +147,7 @@ input.menu {
     display: block;
     text-align: center;
     font-size: 15px;
+    border-radius: 10px;
 }
 
 .navbar-left .dropdown_content a:hover{
