--- a/test_sidebar/test_sidebar.css
+++ b/test_sidebar/test_sidebar.css
@@ -1,11 +1,23 @@
+#sideIsOpen {
+  display:flex;
+  width:100%;
+  height:100%;
+}
+
+#opacity {
+  flex-grow:1;
+  color: rgba(0, 0, 0, 0.3);
+}
+
 #sidebar {
     position: fixed;
     top: 0;
-    left: -250px; /* Set initial position off the screen */
+    right: -250px; /* Set initial position off the screen */
     width: 250px;
     height: 100%;
     background-color: #333;
-    transition: left 0.3s ease;
+    transition: right 0.3s ease;
+    z-index:1;
   }
   
   .sidebar {
@@ -14,8 +26,8 @@
   }
   
   #sidebar-toggle {
-    position: fixed;
-    top: 20px;
-    right: 20px;
+    background: url("../img/menu1.svg") no-repeat;
+    background-position: center;
+    border: 0px;
+    padding: 0px;
   }
-  
