--- a/test_sidebar/test_sidebar.css
+++ b/test_sidebar/test_sidebar.css
@@ -1,12 +1,12 @@
 #sideIsOpen {
-  display:flex;
   width:100%;
   height:100%;
+  background-color : rgb(255,255,255,0.5);
 }
 
 #opacity {
   flex-grow:1;
-  color: rgba(0, 0, 0, 0.3);
+  background-color : rgb(255,255,255,0.5);
 }
 
 #sidebar {
@@ -17,7 +17,6 @@
     height: 100%;
     background-color: #333;
     transition: right 0.3s ease;
-    z-index:1;
   }
   
   .sidebar {
