--- a/style.css
+++ b/style.css
@@ -20,27 +20,40 @@ a {
     text-decoration: none;
 }
 
-/* 페이지 메뉴 설정 */
-input.menu {
+/* sidebar 설정 */
+#opacity {
+    position: fixed;
+    top: 0;
+    width:100%;
+    height:100%;
+    z-index:1;
+    background-color : rgb(0, 0, 0, 0.3);
+}
+  
+#sidebar {
+    position: fixed;
+    top: 0;
+    right: -250px; /* Set initial position off the screen */
+    z-index: 2;
+    width: 250px;
+    height: 100%;
+    background-color: #333;
+    transition: right 0.3s ease;
+}
+    
+.sidebar {
+    padding: 20px;
+    color: #fff;
+}
+    
+#sidebar-toggle {
     background: url("img/menu1.svg") no-repeat;
     background-position: center;
     border: 0px;
     padding: 0px;
 }
 
-.side-menu {
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
-    z-index: 1;
-    position: absolute;
-    background-color: white;
-    display: none;
-}
-
 /* header 설정 */
-
-
 .top-header a {
     font-size: 15px;
 }
