--- a/test_sidebar/test_sidebar.css
+++ b/test_sidebar/test_sidebar.css
@@ -1,18 +1,17 @@
-#sideIsOpen {
+#opacity {
+  position: fixed;
+  top: 0;
   width:100%;
   height:100%;
-  background-color : rgb(255,255,255,0.5);
-}
-
-#opacity {
-  flex-grow:1;
-  background-color : rgb(255,255,255,0.5);
+  z-index:1;
+  background-color : rgb(0, 0, 0, 0.3);
 }
 
 #sidebar {
     position: fixed;
     top: 0;
     right: -250px; /* Set initial position off the screen */
+    z-index: 2;
     width: 250px;
     height: 100%;
     background-color: #333;
