--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ a {
     top: 0;
     width:100%;
     height:100%;
-    z-index:1;
+    z-index:2;
     background-color : rgb(0, 0, 0, 0.3);
 }
   
@@ -34,7 +34,7 @@ a {
     position: fixed;
     top: 0;
     right: -250px; /* Set initial position off the screen */
-    z-index: 2;
+    z-index: 3;
     width: 250px;
     height: 100%;
     background-color: #333;
@@ -44,6 +44,10 @@ a {
 .sidebar {
     padding: 20px;
     color: #fff;
+}
+
+.sidebar a {
+    color: white;
 }
     
 #sidebar-toggle {
@@ -96,8 +100,8 @@ a {
     font-family: "Gowun Dodum", sans-serif;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /*그림자*/
     position: absolute; /* 고정*/
-    left: 1.5%; /* 움직이기*/
-    transform: translateX(+1.5); /**/
+    /* 움직이기 */
+    left: 1.5%; 
     width: 97%; /* 띄우기 !*/
 }
 
@@ -163,7 +167,6 @@ a {
     padding: 15px 10px;
     color: black;
     display: block;
-    text-align: center;
     font-size: 15px;
     border-radius: 10px;
 }
@@ -186,10 +189,6 @@ a {
     margin:12px;
     margin-right:30px;
     flex-grow: 0;
-}
-
-.dropdown_content {
-    z-index: 1;
 }
 
 /* main tag margin */
@@ -302,17 +301,17 @@ footer {
 
 }
 
-@media screen and (max-width: 959px) {
-    .title {
+@media screen and (max-width: 1023px) {
+    /* .title {
         flex-grow:1;
-    }
+    } */
     
     .navbar-left {
         display:none;
     }
 }
 
-@media screen and (min-width: 960px) {
+@media screen and (min-width: 1024px) {
     .navbar-left {
         display:flex;
     }
