--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ a {
     background-position: center;
     border: 0px;
     padding: 0px;
+    height: 32px;
+    width: 32px;
+    margin: 12px 25px 10px 12px;
+    flex-grow: 0;
 }
 
 /* header 설정 */
@@ -112,7 +116,7 @@ a {
     height: 25px;
     margin-top: 20px;
     margin-bottom: 20px;
-    margin-left: 17.602px;
+    margin-left: 10px;
     margin-right: 10px;
     padding: 0px;
 }
@@ -147,7 +151,7 @@ a {
     margin-top: 20px;
     margin-bottom: 20px;
     background-color: inherit;
-    /* width: 120px; */
+    width: 110px;
     font-family: "Gowun Dodum", sans-serif;
 }
 
@@ -157,7 +161,7 @@ a {
     background-color: #ffffff;
     left: 50%; /* Set left to 0 to align with the parent */
     transform: translateX(-50%); /* Adjust to center the content */
-    /* width: 120px; */
+    width: 110px;
     z-index: 1;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -168,7 +172,7 @@ a {
     float: none;
     padding: 15px 10px;
     display: block;
-    font-size: 15px;
+    font-size: 14px;
     border-radius: 10px;
     text-align: center;
 }
@@ -181,11 +185,10 @@ a {
     display: block;
 }
 
-.navbar-right img, .navbar-right input {
-    height: 2rem;
-    width: 2rem;
-    margin:12px;
-    margin-right:30px;
+.navbar-right img {
+    height: 32px;
+    width: 32px;
+    margin: 16px 10px 12px 20px;
     flex-grow: 0;
 }
 
@@ -320,15 +323,5 @@ footer {
 
     .navbar-left .dropdown_content a {
         font-size:14px;
-    }
-}
-
-@media screen and (min-width: 1025px) and (max-width: 1440px) {
-    .navbar-left button ,.navbar-left .dropdown_content {
-        width: 115px;
-    }
-
-    .navbar-left .dropdown_content a {
-        font-size:15px;
     }
 }
