--- a/church/style_map.css
+++ b/church/style_map.css
@@ -8,7 +8,7 @@ main{
 }
 
 /* 미디어 쿼리 */
-@media screen and (min-width: 768) {
+@media screen and (max-width: 768) {
     .row{
         display: flex;
     }
