--- a/church/style_map.css
+++ b/church/style_map.css
@@ -8,7 +8,7 @@
 }
 
 /* 미디어 쿼리 */
-@media screen and (max-width: 767) {
+@media screen and (max-width: 767px) {
     #daumRoughmapContainer1707545075097 {
         display: none;
     }
