--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ a {
 
 /* sidebar 설정 */
 #opacity {
-    position: fixed;
+    position: absolute;
     top: 0;
     width:100%;
     height:100%;
@@ -55,10 +55,17 @@ a {
     background-position: center;
     border: 0px;
     padding: 0px;
-    height: 32px;
-    width: 32px;
-    margin: 12px 25px 10px 12px;
-    flex-grow: 0;
+    height: 65px;
+    width: 65px;
+}
+
+#sidebar-search {
+    background: url("img/search1.svg") no-repeat;
+    background-position: center;
+    border: 0px;
+    padding: 0px;
+    height: 65px;
+    width: 65px;
 }
 
 /* header 설정 */
@@ -183,13 +190,6 @@ a {
 
 .navbar-left .dropdown:hover .dropdown_content{
     display: block;
-}
-
-.navbar-right img {
-    height: 32px;
-    width: 32px;
-    margin: 16px 10px 12px 20px;
-    flex-grow: 0;
 }
 
 /* main tag margin */
@@ -341,7 +341,7 @@ footer {
         font-size:12px;
     }
 
-    .navbar-right img {
+    /* .navbar-right img {
         margin-left: 15px;
-    }
+    } */
 }
