--- a/service/style_live.css
+++ b/service/style_live.css
@@ -12,14 +12,36 @@
     background-color: rgb(254, 254, 254);
     border: 1px solid rgba(0, 0, 0, 0.199);
     border-radius: 10px;
-
 }
 
 .right-side{
     width: 100%;
     background-color: rgb(254, 254, 254);
     border: 1px solid rgba(0, 0, 0, 0.202);
-
     border-radius: 10px;
+    padding-left: 20px;
+}
 
+.video{
+    display: flex;
+}
+
+.videoplayer{
+    height: 315px;
+    width: 560px;
+    margin-right: 10px;
+}
+
+.videodescription{
+    width: 100%;
+    height: 315px;
+}
+
+.videodescription h4{
+    margin-top: 0px;
+}
+
+.description{
+    height: 900px;
+    width: 100%;
 }
